# pixi.cmake

./: .gersemirc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pixi.cmake
.github/workflows/: ci.yml
tests/: CMakeLists.txt
tests/test_boost/: CMakeLists.txt  main.cpp  pixi.toml
tests/test_bootstrap/: CMakeLists.txt
tests/test_fetchcontent_local_source_dir/: CMakeLists.txt
tests/test_fetchcontent_remote/: CMakeLists.txt
tests/test_inline_dependencies/: CMakeLists.txt
tests/test_inline_dependencies_defaults/: CMakeLists.txt
tests/test_inline_dependencies_dev/: CMakeLists.txt
